--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -51,3 +51,113 @@
       width: 100%;
     }
   }
+
+
+  /* //PATIENT DASHBOARD************* */
+
+  #container h2,
+#container h3 ,
+#doctor-form-container h3{
+  color: #1f2937;
+  margin-bottom: 1rem;
+}
+
+#container button[data-action],
+#patient-action-container button,
+#doctor-action-container button,
+#doctor-form-container button {
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  padding: 0.6rem 1.2rem;
+  background-color: #2563eb;
+  color: white;
+  border: none;
+  border-radius: 0.4rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#container button[data-action]:hover,
+#patient-action-container button:hover ,
+#doctor-action-container button:hover,
+#doctor-form-container button:hover{
+  background-color: #1d4ed8;
+}
+
+#patient-action-container form,
+#doctor-form-container form,
+#patient-action-container input,
+#doctor-form-container input,
+#patient-action-container button,
+#doctor-form-container button,
+#patient-action-container table,
+#doctor-form-container table {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto 1rem auto;
+}
+
+#patient-action-container input,
+#doctor-form-container input {
+  display: block;
+  width: 100%;
+  padding: 0.6rem;
+  margin: 0.5rem 0;
+  border: 1px solid #ccc;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+}
+
+#patient-action-container table,
+#doctor-form-container table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
+
+#patient-action-container th,
+#patient-action-container td,
+#doctor-form-container th,
+#doctor-form-container td {
+  border: 1px solid #ddd;
+  padding: 0.75rem;
+  text-align: left;
+}
+
+#patient-action-container th,
+#doctor-form-container th {
+  background-color: #f3f4f6;
+  color: #111827;
+}
+
+#searchResult p,
+#doctorSearchResult p {
+  background: #f9fafb;
+  padding: 0.75rem;
+  border-left: 4px solid #2563eb;
+  margin-bottom: 0.5rem;
+}
+#doctor-form-container div {
+  background: #f9fafb;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  /* border-left: 4px solid #2563eb; */
+}
+
+#doctor-form-container div p {
+  margin: 0.3rem 0;
+  font-size: 0.95rem;
+}
+
+@media (max-width: 768px) {
+  #patient-action-container form,
+  #doctor-form-container form,
+  #patient-action-container input,
+  #doctor-form-container input,
+  #patient-action-container button,
+  #doctor-form-container button,
+  #patient-action-container table {
+    width: 100%;
+  }
+}
